--- a/demo/src/main/res/layout/sample_chooser_activity.xml
+++ b/demo/src/main/res/layout/sample_chooser_activity.xml
@@ -18,8 +18,40 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-  <ListView android:id="@+id/sample_list"
-      android:layout_width="match_parent"
-      android:layout_height="match_parent"/>
+    <RelativeLayout
+        android:id="@+id/younity_testing_view"
+        android:padding="8dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <TextView
+            android:id="@+id/url_input_lbl"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="4dp"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentTop="true"
+            android:text="Enter an HLS Uri:"/>
+
+        <EditText
+            android:id="@+id/url_input_et"
+            android:layout_alignLeft="@+id/url_input_lbl"
+            android:layout_below="@+id/url_input_lbl"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+
+        <Button
+            android:id="@+id/start_stream_btn"
+            android:layout_alignLeft="@+id/url_input_lbl"
+            android:layout_below="@+id/url_input_et"
+            android:text="Start HLS Stream"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+
+    </RelativeLayout>
+
+    <ListView android:id="@+id/sample_list"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
 
 </LinearLayout>
